--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 
         <!-- Nicknames Section -->
         <section class="nicknames-section">
+
+            <center>
             <h2 class="size ">My Happiness My world</h2>
+
+                </center>
             <div class="nicknames-list">
                 <div class="nickname">Sukun</div>
                 <div class="nickname">Kadu</div>
